logs/ipa-zounds.log
Listing '.'...
Listing './bin'...
Compiling './bin/ipa-zounds.py'...
***   File "./bin/ipa-zounds.py", line 43
    print _('PyGTK 2.8 is not available; please install it.').encode('utf-8')
          ^
SyntaxError: invalid syntax

Compiling './bin/ipa.py'...
***   File "./bin/ipa.py", line 82
    except zounds.ZoundsError, err:
                             ^
SyntaxError: invalid syntax

Compiling './bin/zounds.py'...
***   File "./bin/zounds.py", line 71
    except zounds.ZoundsError, err:
                             ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ipa_zounds-3.1.egg-info'...
Listing './lib/python3.5/site-packages/ipazounds'...
Compiling './lib/python3.5/site-packages/ipazounds/convert.py'...
***   File "./lib/python3.5/site-packages/ipazounds/convert.py", line 185
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ipazounds/ipa.py'...
***   File "./lib/python3.5/site-packages/ipazounds/ipa.py", line 43
    except zounds.InvalidRuleError, err:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
